# hello-gum

./: .gitignore  README.md  hello.c  meson.build
subprojects/: frida-gum.wrap
